# clearstats-backend

./: Cargo.toml
clearstats-api/: Cargo.toml
clearstats-api/src/: main.rs  state.rs
clearstats-api/src/api/: mod.rs
clearstats-api/src/api/authors/: create.rs  get.rs  mod.rs  search.rs  statistics.rs
clearstats-api/src/api/questions/: create.rs  list.rs  mod.rs  vote.rs
clearstats-api/src/api/statistics/: create.rs  get.rs  list.rs  mod.rs  vote.rs
clearstats-api/src/api/users/: mod.rs  profile.rs  statistics.rs
clearstats-api/src/config/: mod.rs
clearstats-api/src/database/: mod.rs
clearstats-api/src/database/auth/: fetch_user_by_email.rs  insert_user.rs  mod.rs
clearstats-api/src/database/authors/: fetch_author_by_id.rs  fetch_authors_by_ids.rs  insert_author.rs  mod.rs  search_authors.rs
clearstats-api/src/database/questions/: delete_vote.rs  fetch_questions_by_statistic_id.rs  fetch_votes_by_question_ids.rs  insert_question.rs  mod.rs  upsert_vote.rs
clearstats-api/src/database/statistics/: delete_vote.rs  fetch_attachments_by_statistic_ids.rs  fetch_author_ids_by_statistic_ids.rs  fetch_sources_by_statistic_ids.rs  fetch_statistic_by_id.rs  fetch_statistic_ids_by_user_id.rs  fetch_statistic_metrics_by_id.rs  fetch_statistics.rs  fetch_tags_by_statistic_ids.rs  fetch_votes_by_statistic_ids.rs  insert_statistic.rs  mod.rs  upsert_vote.rs
clearstats-api/src/database/users/: fetch_user_by_id.rs  fetch_user_by_username.rs  mod.rs
clearstats-api/src/helpers/: mod.rs
clearstats-api/src/types/: mod.rs
clearstats-api/src/utils/: time.rs
clearstats-auth/: Cargo.toml  README.md
clearstats-auth/src/: main.rs  state.rs
clearstats-auth/src/api/: mod.rs
clearstats-auth/src/api/error/: mod.rs  test_error.rs
clearstats-auth/src/api/jwt/: gen_access_token.rs  gen_refresh_token.rs  mod.rs
clearstats-auth/src/api/user/: change_password.rs  get_email.rs  login.rs  logout.rs  mod.rs  register.rs  update_user.rs
clearstats-auth/src/config/: mod.rs
clearstats-auth/src/database/: mod.rs
clearstats-auth/src/database/email_change_request/: delete_email_change_request.rs  fetch_email_change_verification_code.rs  fetch_user_pending_email.rs  mod.rs  set_pending_email_as_email.rs  upsert_email_change_request.rs
clearstats-auth/src/database/user_credential/: check_email_exists.rs  check_username_exists.rs  fetch_user_by_email.rs  fetch_user_by_user_id.rs  fetch_user_by_username.rs  fetch_user_email.rs  insert_user.rs  mod.rs  reset_password.rs  update_email_verified.rs  update_password.rs  update_user.rs
clearstats-auth/src/database/user_recovery/: delete_reset_code.rs  fetch_password_reset_code.rs  insert_password_reset_code.rs  mod.rs
clearstats-auth/src/database/user_verification/: fetch_verification_code.rs  mod.rs  (+1 more)
clearstats-auth/src/queue/: message_handler.rs  mod.rs
clearstats-auth/src/test_utils/: mod.rs  test_server.rs
clearstats-auth/src/utils/: crypto.rs  jwt.rs
shared-lib/: Cargo.toml  README.md
shared-lib/src/: lib.rs
shared-lib/src/config/: env.rs  jwt.rs  mod.rs  service_config.rs
shared-lib/src/database/: manager.rs  mod.rs
shared-lib/src/error/: mod.rs  server_response.rs
shared-lib/src/integrations/: mod.rs
shared-lib/src/logging/: mod.rs  tracing_filter.rs  tracing_registry.rs
shared-lib/src/server/: cors.rs  health.rs  mod.rs
shared-lib/src/test_utils/: gcp.rs  jwt.rs  mod.rs  parse.rs  test_channel.rs  test_institution.rs  test_lab.rs  test_request.rs  test_role.rs  test_user.rs
shared-lib/src/types/: country.rs  group_by.rs  jwt.rs  language.rs  mod.rs  storage.rs  timezone.rs  user.rs
shared-lib/src/utils/: input_validation.rs  mod.rs  request.rs  response.rs  time.rs
(+113 files in other folders)
