[package]
name = "clearstats-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

shared-lib.workspace = true
